--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,4 @@
-import streamlit as st
-import nltk
-from nltk.tokenize import word_tokenize
-from nltk.corpus import stopwords
-from nltk.stem import WordNetLemmatizer
-from sklearn.feature_extraction.text import CountVectorizer
-from sklearn.naive_bayes import MultinomialNB
-import numpy as np
-import json
-st.title("Hospital Chatbot")
-st.write("Ask me something!")
+streamlit
+nltk
+scikit-learn
+numpy
